Changed how the theme gets changed so that the MainWindow can watch for system theme changes if the theme is set to system. Fixed an issue with the text colors on the TimingResultsPage. Modified every single Page to use the Foreground field to attempt to fix this everywhere. Icons now properly work everywhere they worked before. Condensed some XAML code down, blew some up.

--- a/ChronoKeep/UI/API/APIPage1.xaml
+++ b/ChronoKeep/UI/API/APIPage1.xaml
@@ -8,7 +8,9 @@
       mc:Ignorable="d" 
       d:DesignHeight="450"
       d:DesignWidth="300"
-      Title="APIPage1">
+      Title="APIPage1"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2">
         <TextBlock Text="Select API to use:" FontSize="16" TextAlignment="Center" Margin="0,0,0,5"/>
         <ComboBox Name="APIBox" Width="250" VerticalAlignment="Center" Margin="0,0,0,15" />
