--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -6,8 +6,11 @@
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="TimingResultsPage">
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="TimingResultsPage"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
     <Grid>
         <Grid.Resources>
             <Style TargetType="ListViewItem" x:Key="alternatingStyle">
@@ -19,8 +22,8 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
             <RowDefinition Height="25" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ListView
             x:Name="updateListView"
@@ -33,66 +36,67 @@
             MouseDoubleClick="UpdateListView_MouseDoubleClick"
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-            Grid.Row="0"
+            Grid.Row="1"
             AlternationCount="2"
             ItemContainerStyle="{StaticResource alternatingStyle}"
+            Margin="0,0,0,0"
             >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="70"/>
-                            <ColumnDefinition Width="30"/>
-                            <ColumnDefinition Width="130"/>
-                            <ColumnDefinition Width="90"/>
-                            <ColumnDefinition Width="90"/>
-                            <ColumnDefinition Width="50"/>
-                            <ColumnDefinition Width="130"/>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="25"/>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="60"/>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="60"/>
-                            <ColumnDefinition Width="20"/>
-                            <ColumnDefinition Width="70"/>
+                            <ColumnDefinition Width="80"/>  <!-- Location -->
+                            <ColumnDefinition Width="30"/>  <!-- Occurence -->
+                            <ColumnDefinition Width="140"/> <!-- System Time -->
+                            <ColumnDefinition Width="90"/>  <!-- Time -->
+                            <ColumnDefinition Width="90"/>  <!-- Chip Time -->
+                            <ColumnDefinition Width="50"/>  <!-- Bib -->
+                            <ColumnDefinition Width="130"/> <!-- Name -->
+                            <ColumnDefinition Width="40"/>  <!-- Place -->
+                            <ColumnDefinition Width="25"/>  <!-- Gender -->
+                            <ColumnDefinition Width="40"/>  <!-- Gender Place -->
+                            <ColumnDefinition Width="60"/>  <!-- Age Group -->
+                            <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
+                            <ColumnDefinition Width="90"/>  <!-- Distance -->
+                            <ColumnDefinition Width="20"/>  <!-- Type -->
+                            <ColumnDefinition Width="80"/>  <!-- Segment -->
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}"/>
-                        <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}"/>
-                        <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding SysTime}"/>
-                        <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Time}"/>
-                        <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding ChipLapTime}"/>
-                        <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Bib}"/>
-                        <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding ParticipantName}"/>
-                        <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding PlaceStr}"/>
-                        <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding PrettyGender}"/>
-                        <TextBlock Grid.Column="9" Margin="4,4" Text="{Binding GenderPlaceStr}"/>
-                        <TextBlock Grid.Column="10" Margin="4,4" Text="{Binding AgeGroupName}"/>
-                        <TextBlock Grid.Column="11" Margin="4,4" Text="{Binding AgePlaceStr}"/>
-                        <TextBlock Grid.Column="12" Margin="4,4" Text="{Binding DistanceName}"/>
-                        <TextBlock Grid.Column="13" Margin="4,4" Text="{Binding PrettyType}"/>
-                        <TextBlock Grid.Column="14" Margin="4,4" Text="{Binding SegmentName}"/>
+                        <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}" />
+                        <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}" />
+                        <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding SysTime}" />
+                        <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Time}" />
+                        <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding ChipLapTime}" />
+                        <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Bib}" />
+                        <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding ParticipantName}" />
+                        <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding PlaceStr}" />
+                        <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding PrettyGender}" />
+                        <TextBlock Grid.Column="9" Margin="4,4" Text="{Binding GenderPlaceStr}" />
+                        <TextBlock Grid.Column="10" Margin="4,4" Text="{Binding AgeGroupName}" />
+                        <TextBlock Grid.Column="11" Margin="4,4" Text="{Binding AgePlaceStr}" />
+                        <TextBlock Grid.Column="12" Margin="4,4" Text="{Binding DistanceName}" />
+                        <TextBlock Grid.Column="13" Margin="4,4" Text="{Binding PrettyType}" />
+                        <TextBlock Grid.Column="14" Margin="4,4" Text="{Binding SegmentName}" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid Margin="5,0" Grid.Row="1">
+        <Grid Margin="5,0" Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="70"/>
-                <ColumnDefinition Width="30"/>
-                <ColumnDefinition Width="130"/>
-                <ColumnDefinition Width="90"/>
-                <ColumnDefinition Width="90"/>
-                <ColumnDefinition Width="50"/>
-                <ColumnDefinition Width="130"/>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition Width="25"/>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="70"/>
+                <ColumnDefinition Width="80"/>  <!-- Location -->
+                <ColumnDefinition Width="30"/>  <!-- Occurence -->
+                <ColumnDefinition Width="140"/> <!-- System Time -->
+                <ColumnDefinition Width="90"/>  <!-- Time -->
+                <ColumnDefinition Width="90"/>  <!-- Chip Time -->
+                <ColumnDefinition Width="50"/>  <!-- Bib -->
+                <ColumnDefinition Width="130"/> <!-- Name -->
+                <ColumnDefinition Width="40"/>  <!-- Place -->
+                <ColumnDefinition Width="25"/>  <!-- Gender -->
+                <ColumnDefinition Width="40"/>  <!-- Gender Place -->
+                <ColumnDefinition Width="60"/>  <!-- Age Group -->
+                <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
+                <ColumnDefinition Width="90"/>  <!-- Distance -->
+                <ColumnDefinition Width="20"/>  <!-- Type -->
+                <ColumnDefinition Width="80"/>  <!-- Segment -->
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
             <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
@@ -101,11 +105,11 @@
             <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
             <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
             <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
-            <TextBlock Grid.Column="7" Margin="4,4" Text="Pl" x:Name="placeText" />
+            <TextBlock Grid.Column="7" Margin="4,4" Text="Pl" x:Name="placeText"/>
             <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
-            <TextBlock Grid.Column="9" Margin="4,4" Text="GP" x:Name="genderPlaceText" />
+            <TextBlock Grid.Column="9" Margin="4,4" Text="GP" x:Name="genderPlaceText"/>
             <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
-            <TextBlock Grid.Column="11" Margin="4,4" Text="AP" x:Name="agePlaceText" />
+            <TextBlock Grid.Column="11" Margin="4,4" Text="AP" x:Name="agePlaceText"/>
             <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
             <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
             <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
