--- a/ChronoKeep/UI/API/APIErrorPage.xaml
+++ b/ChronoKeep/UI/API/APIErrorPage.xaml
@@ -6,8 +6,11 @@
       xmlns:local="clr-namespace:Chronokeep.UI.API"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="300"
-      Title="APIErrorPage">
+      d:DesignHeight="450"
+      d:DesignWidth="300"
+      Title="APIErrorPage"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
     <Grid>
         <TextBlock Name="errorLabel" Text="Error, unable to continue." TextWrapping="Wrap" MaxWidth="250" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
