--- a/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
+++ b/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
@@ -6,8 +6,12 @@
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ChipAssigmentPage" Loaded="Page_Loaded">
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="ChipAssigmentPage"
+      Loaded="Page_Loaded"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
     <Grid>
         <TextBlock 
             Name="nothing"
