--- a/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
+++ b/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
@@ -6,8 +6,11 @@
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="DistanceStatsPage">
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="DistanceStatsPage"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
 
     <Grid>
         <Grid.Resources>
