--- a/ChronoKeep/UI/Timing/Import/ImportLogPage1.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogPage1.xaml
@@ -4,9 +4,11 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.Timing.Import"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      Title="ImportLogPage1">
+      Title="ImportLogPage1"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
 
     <StackPanel VerticalAlignment="Center">
         <DockPanel LastChildFill="False" HorizontalAlignment="Center" Margin="10,10,10,5">
