--- a/ChronoKeep/UI/Timing/Import/ImportLogPage2.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogPage2.xaml
@@ -6,8 +6,11 @@
       xmlns:local="clr-namespace:Chronokeep.UI.Timing.Import"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ImportLogPage2">
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="ImportLogPage2"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
 
     <Grid>
         <Grid.RowDefinitions>
