--- a/ChronoKeep/UI/Timing/PrintPage.xaml
+++ b/ChronoKeep/UI/Timing/PrintPage.xaml
@@ -6,8 +6,11 @@
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PrintPage">
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="PrintPage"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <StackPanel HorizontalAlignment="Center">
             <Grid Margin="5,5,5,5">
