--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -6,8 +6,11 @@
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="TimingRawReadsPage">
+      d:DesignHeight="450"
+      d:DesignWidth="800"
+      Title="TimingRawReadsPage"
+      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+      >
     <Grid>
         <Grid.Resources>
             <Style TargetType="ListViewItem" x:Key="alternatingStyle">
@@ -24,8 +27,8 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
                 <RowDefinition Height="30" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <ListView 
                     x:Name="updateListView" 
@@ -36,7 +39,7 @@
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                    Grid.Row="0"
+                    Grid.Row="1"
                     AlternationCount="2"
                     ItemContainerStyle="{StaticResource alternatingStyle}"
                     >
@@ -67,7 +70,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Grid Margin="5,0" Grid.Row="1">
+            <Grid Margin="5,0,0,0" Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="40"/>
                     <ColumnDefinition Width="80"/>
